--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@
 
 @import "{{ site.theme }}";
 
-body {
+!important body {
   background: url(../imagess/background.png) #cc2200;
   background-color: #cc2200;
   background-color: rgb(204, 34, 0);  
 }
 
-header {
+!important header {
   background: url(../imagess/background.png) #cc2200;
   background-color: #cc2200;
   background-color: rgb(204, 34, 0);  
