--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,7 +15,7 @@ body {
 
 // Stylizacja nagłówka
 header {
-  background-color: #005f73;  // Zielony kolor tła nagłówka
+  background-color: #cc2200;  // Zielony kolor tła nagłówka
   color: white;  // Kolor tekstu w nagłówku
   padding: 20px;  // Odstępy wewnętrzne
   text-align: center;  // Wyśrodkowanie tekstu
@@ -25,7 +25,7 @@ header {
 
 // Linki w nagłówku
 header a {
-  color: #ffffff;  // Kolor tekstu linków
+  color: #cc2200;  // Kolor tekstu linków
   text-decoration: none;  // Usunięcie podkreślenia
   padding: 5px 10px;  // Marginesy wewnętrzne dla linków
 }
@@ -56,7 +56,7 @@ footer {
 
 // Style dla przycisków
 button {
-  background-color: #0288d1;  // Niebieski kolor przycisku
+  background-color: #cc2200;  // Niebieski kolor przycisku
   color: white;  // Kolor tekstu
   border: none;  // Bez obramowania
   padding: 10px 20px;  // Marginesy wewnętrzne
