--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,6 +4,7 @@
 
 // Podstawowe style dla całego ciała strony
 body {
+  background: url(../images/background_brake.png) #cc2200;
   background-color: #f4f4f4;  // Jasnoszare tło strony
   font-family: 'Helvetica', 'Arial', sans-serif;  // Zmiana czcionki
   font-size: 18px;  // Ustawienie rozmiaru czcionki
@@ -15,6 +16,7 @@ body {
 
 // Stylizacja nagłówka
 header {
+  background: url(../images/background_brake.png) #cc2200;
   background-color: #cc2200;  // Zielony kolor tła nagłówka
   color: white;  // Kolor tekstu w nagłówku
   padding: 20px;  // Odstępy wewnętrzne
@@ -25,6 +27,7 @@ header {
 
 // Linki w nagłówku
 header a {
+  background: url(../images/background_brake.png) #cc2200;
   color: #cc2200;  // Kolor tekstu linków
   text-decoration: none;  // Usunięcie podkreślenia
   padding: 5px 10px;  // Marginesy wewnętrzne dla linków
