--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,6 +17,7 @@ body {
 // Stylizacja nagłówka
 header {
   background: url(../images/background_brake.png) #cc2200 !important;
+  background-repeat: no-repeat;
   background-color: #cc2200 !important;
   color: white;  // Kolor tekstu w nagłówku
   padding: 20px;  // Odstępy wewnętrzne
