--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,25 +5,25 @@
 // Podstawowe style dla całego ciała strony
 body {
 
-  background-color: #f4f4f4;  // Jasnoszare tło strony
-  font-family: 'Helvetica', 'Arial', sans-serif;  // Zmiana czcionki
-  font-size: 18px;  // Ustawienie rozmiaru czcionki
-  line-height: 1.6;  // Ustawienie odstępów między liniami
-  color: #333;  // Kolor tekstu
-  margin: 0;
-  padding: 0;
+ // background-color: #f4f4f4;  // Jasnoszare tło strony
+ // font-family: 'Helvetica', 'Arial', sans-serif;  // Zmiana czcionki
+ // font-size: 18px;  // Ustawienie rozmiaru czcionki
+ // line-height: 1.6;  // Ustawienie odstępów między liniami
+ // color: #333;  // Kolor tekstu
+ // margin: 0;
+ // padding: 0;
 }
 
 // Stylizacja nagłówka
 header {
-  background: url(../images/background_brake.png) #cc2200 !important;
+  background: url(../images/background_brake.png) #333333 !important;
 //  background-repeat: repeat-x;
-  background-color: #cc2200 !important;
-  color: white;  // Kolor tekstu w nagłówku
-  padding: 20px;  // Odstępy wewnętrzne
-  text-align: center;  // Wyśrodkowanie tekstu
-  font-size: 2em;  // Powiększenie czcionki nagłówka
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);  // Lekki cień pod nagłówkiem
+  background-color: #333333 !important;
+ // color: white;  // Kolor tekstu w nagłówku
+ // padding: 20px;  // Odstępy wewnętrzne
+ // text-align: center;  // Wyśrodkowanie tekstu
+ // font-size: 2em;  // Powiększenie czcionki nagłówka
+ // box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);  // Lekki cień pod nagłówkiem
 }
 
 // Linki w nagłówku
@@ -41,33 +41,33 @@ header a:hover {
 
 // Podstawowe style dla głównej treści strony
 main {
-  padding: 20px;  // Marginesy wewnętrzne
-  max-width: 1200px;  // Maksymalna szerokość
-  margin: 20px auto;  // Wyśrodkowanie treści
-  background-color: #ffffff;  // Kolor tła dla głównej treści
-  border-radius: 10px;  // Zaokrąglenie rogów
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);  // Cień wokół treści
+ // padding: 20px;  // Marginesy wewnętrzne
+ // max-width: 1200px;  // Maksymalna szerokość
+ // margin: 20px auto;  // Wyśrodkowanie treści
+ // background-color: #ffffff;  // Kolor tła dla głównej treści
+ // border-radius: 10px;  // Zaokrąglenie rogów
+ // box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);  // Cień wokół treści
 }
 
 // Stopka
 footer {
-  background-color: #333;  // Ciemne tło stopki
-  color: white;  // Kolor tekstu
-  text-align: center;  // Wyśrodkowanie tekstu
-  padding: 15px;  // Odstępy wewnętrzne
-  font-size: 0.9em;  // Mniejsza czcionka
+ // background-color: #333;  // Ciemne tło stopki
+ // color: white;  // Kolor tekstu
+ // text-align: center;  // Wyśrodkowanie tekstu
+ // padding: 15px;  // Odstępy wewnętrzne
+ // font-size: 0.9em;  // Mniejsza czcionka
 }
 
 // Style dla przycisków
 button {
-  background-color: #cc2200;  // Niebieski kolor przycisku
-  color: white;  // Kolor tekstu
-  border: none;  // Bez obramowania
-  padding: 10px 20px;  // Marginesy wewnętrzne
-  font-size: 1em;  // Rozmiar czcionki
-  cursor: pointer;  // Kursor wskazujący, że jest to klikalne
-  border-radius: 5px;  // Zaokrąglenie rogów
-  transition: background-color 0.3s ease;  // Efekt przejścia dla tła
+  background-color: #cc2200;  
+ // color: white;  // Kolor tekstu
+ // border: none;  // Bez obramowania
+ // padding: 10px 20px;  // Marginesy wewnętrzne
+ // font-size: 1em;  // Rozmiar czcionki
+ // cursor: pointer;  // Kursor wskazujący, że jest to klikalne
+ // border-radius: 5px;  // Zaokrąglenie rogów
+ // transition: background-color 0.3s ease;  // Efekt przejścia dla tła
 }
 
 button:hover {
